Budger Planner on main page

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,7 +27,7 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css"/>
 
-  <title>Budget App</title>
+  <title>Budget Planner</title>
   
 </head>
 
